fixed footer align issue

--- a/dronesym-frontend/src/app/login/login.component.css
+++ b/dronesym-frontend/src/app/login/login.component.css
@@ -46,11 +46,6 @@
 	}
 }
 
-.footer-label[_ngcontent-c1] {
-	margin-left:70px;
-	width:200px;
-}
-
 #forgetLink {
 	margin-top: 25px;
 }
